fixed dark mode toggle issue

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -26,7 +26,8 @@
         --radius: 0.5rem;
     }
 
-    .dark {
+    .dark,
+    :root[class~="dark"] {
         --background: 240 10% 3.9%;
         --foreground: 0 0% 98%;
         --card: 240 10% 3.9%;
